resources/dashy-service/overlays/dev/dashy-service-ingress-kustomize.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashy-service
  namespace: core
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # This should match the IngressClass for NGINX
  rules:
  - host: dashy.local.m-mobility.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashy-service
            port:
              number: 80
